--- a/404.html
+++ b/404.html
@@ -49,7 +49,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="index.html">
-                <img class="logo" src="pictures/logo_web_170.jpg" alt="">
+                <img class="logo" src="pictures/old/logo_web_170.jpg" alt="">
             </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
