--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,8 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="index.html">
-                <img class="logo" src="pictures/logo_web_170.jpg" alt="">
+                <img class="logo" src="pictures/logo_new.png" alt="">
+                <img class="logo2" src="pictures/logo_new_min.png" alt="">
             </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -86,9 +87,7 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Kontakt
-                    <small>Informationen</small>
-                </h1>
+                <h1 class="page-header">Kontakt Informationen</h1>
             </div>
         </div>
         <!-- /.row -->
@@ -98,32 +97,32 @@
             <!-- Map Column -->
             <div class="col-md-8">
                 <!-- Embedded Google Map -->
-                <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2739.6903164151126!2d14.340761500000001!3d46.6328799!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47707351fe10ed63%3A0xb90396577ece6005!2sSchachterlweg+84%2C+9020+Sankt+Peter+am+Bichl!5e0!3m2!1sen!2sat!4v1413989146829"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1621.8797552765695!2d14.877571470920484!3d46.869949973221!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4770274b25bf8fd7%3A0xc02e1b0a17cb092!2sDr.+Petra+Douschan!5e0!3m2!1sde!2sat!4v1519659497553" width="100%" height="400pc" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <!-- Contact Details Column -->
             <div class="col-md-4">
                 <h3>Details</h3>
                 <p>
-                    Dr. Petra Douschan <br> Schachterlweg 84 <br> 9020 Klagenfurt<br>
+                    Dr. Petra Douschan <br> St. Gertraud 84 <br> 9413 Frantschach-St.Gertraud<br>
                 </p>
-                <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">Telefon</abbr>: (+43) 699-10500590</p>
+                <p><i class="fa fa-phone"></i>
+                    <abbr title="Phone">Telefon</abbr>: (+43) 4352 49005</p>
 <!--                <p><i class="fa fa-envelope-o"></i>
                     <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">email? was is das ?</a>
                 </p>-->
                 <p><i class="fa fa-clock-o"></i> 
-                    <abbr title="Hours">Ordinationszeiten: <br></abbr> Mo + Fr: 14 - 18 Uhr <br> Di + Do: 8 - 12 Uhr <br> Fr: Nach Vereinbarung</p>
+                    <abbr title="Hours">Ordinationszeiten: <br></abbr> Mo + Mi: 14 - 19 Uhr <br> Di + Do: 8 - 13 Uhr <br> Fr: 8-12 Uhr</p>
             </div>
         </div>
         <!-- /.row -->
 <hr>
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive img-rounded" src="pictures/haus.jpeg" alt="">
+                <img class="img-responsive img-rounded" src="pictures/Ordination/Ordi.png" alt="">
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-12">
-                <p>Schachterlweg 84</p>
+                <p>St. Gertraud 84</p>
                 <!--<a class="btn btn-primary btn-lg" href="#">Call to Action!</a>-->
             </div>
             <!-- /.col-md-4 -->
