--- a/ordination.html
+++ b/ordination.html
@@ -49,7 +49,8 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="index.html">
-                <img class="logo" src="pictures/logo_web_170.jpg" alt="">
+                <img class="logo" src="pictures/logo_new.png" alt="">
+                <img class="logo2" src="pictures/logo_new_min.png" alt="">
             </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -97,11 +98,10 @@
     </div>
     <!-- /.row -->
 
-
     <!-- Project One -->
     <div class="row">
         <div class="col-md-6">
-            <img class="img-responsive img-hover" src="pictures/Ordination/GroßerBehandlungsraum_clean_900x645.jpg" alt="">
+            <img class="img-responsive img-hover" src="pictures/Ordination/Warteraum.png" alt="">
         </div>
     </div>
     <!-- /.row -->
@@ -111,7 +111,7 @@
     <!-- Project One -->
     <div class="row">
         <div class="col-md-6">
-            <img class="img-responsive img-hover" src="pictures/Ordination/GroßerBehandlungsraum2_900x600.jpg" alt="">
+            <img class="img-responsive img-hover" src="pictures/Ordination/Ordination1_.png" alt="">
         </div>
     </div>
     <!-- /.row -->
@@ -121,37 +121,7 @@
     <!-- Project Three -->
     <div class="row">
         <div class="col-md-6">
-            <img class="img-responsive img-hover" src="pictures/Ordination/KleinerBehandlungsraum_900x600.jpg" alt="">
-        </div>
-    </div>
-    <!-- /.row -->
-
-    <hr>
-
-    <!-- Project Four -->
-    <div class="row">
-        <div class="col-md-6">
-            <img class="img-responsive img-hover" src="pictures/Ordination/warezimmer_603x900.jpg" alt="">
-        </div>
-    </div>
-    <!-- /.row -->
-
-    <hr>
-
-    <div class="row">
-        <div class="col-md-6">
-            <img class="img-responsive img-hover" src="pictures/Ordination/Warteraum-(2)_900x600.jpg" alt="">
-        </div>
-    </div>
-
-    <hr>
-
-
-
-    <!-- Project Three -->
-    <div class="row">
-        <div class="col-md-6">
-            <img class="img-responsive img-hover" src="pictures/Ordination/Röntgengerät_900x786.jpg" alt="">
+            <img class="img-responsive img-hover" src="pictures/Ordination/Roentgen.png" alt="">
         </div>
     </div>
     <!-- /.row -->
