--- a/services.html
+++ b/services.html
@@ -12,7 +12,8 @@
     <title>Ordination Dr Petra Douschan</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/small-business.css" rel="stylesheet">
@@ -51,7 +52,8 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="index.html">
-                <img class="logo" src="pictures/logo_web_170.jpg" alt="">
+                <img class="logo" src="pictures/logo_new.png" alt="">
+                <img class="logo2" src="pictures/logo_new_min.png" alt="">
             </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -188,7 +190,7 @@
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="col" data-toggle="collapse" data-parent="#accordion1" href="#collapseOne">Konservierende Zahnheilkunde
+                    <a class="col headlining" data-toggle="collapse" data-parent="#accordion1" href="#collapseOne">Konservierende Zahnheilkunde
                     </a>
                 </h4>
             </div>
@@ -234,7 +236,7 @@
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="col" data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo">Parodontologie
+                    <a class="col headlining" data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo">Parodontologie
                     </a>
                 </h4>
             </div>
@@ -248,7 +250,7 @@
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="col" data-toggle="collapse" data-parent="#accordion1" href="#collapseThree">Chirurgische Eingriffe
+                    <a class="col headlining" data-toggle="collapse" data-parent="#accordion1" href="#collapseThree">Chirurgische Eingriffe
                     </a>
                 </h4>
             </div>
@@ -285,7 +287,7 @@
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="col" data-toggle="collapse" data-parent="#accordion1" href="#collapseFour">Prothetische Versorgungen
+                    <a class="col headlining" data-toggle="collapse" data-parent="#accordion1" href="#collapseFour">Prothetische Versorgungen
                     </a>
                 </h4>
             </div>
@@ -299,7 +301,7 @@
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="col" data-toggle="collapse" data-parent="#accordion1" href="#collapseFive">Restaurative Versorgungen
+                    <a class="col headlining" data-toggle="collapse" data-parent="#accordion1" href="#collapseFive">Restaurative Versorgungen
                     </a>
                 </h4>
             </div>
@@ -352,12 +354,10 @@
             </div>
         </div>
 
-
-
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="col" data-toggle="collapse" data-parent="#accordion1" href="#collapseSix">Schienentherapie bei Kiefergelenksbeschwerden
+                    <a class="col headlining" data-toggle="collapse" data-parent="#accordion1" href="#collapseSix">Schienentherapie bei Kiefergelenksbeschwerden
                     </a>
                 </h4>
             </div>
@@ -372,7 +372,7 @@
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="col" data-toggle="collapse" data-parent="#accordion1" href="#collapseSeven">Prophylaxe
+                    <a class="col headlining" data-toggle="collapse" data-parent="#accordion1" href="#collapseSeven">Prophylaxe
                     </a>
                 </h4>
             </div>
@@ -387,7 +387,7 @@
         <div class="panel panel-success">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="col" data-toggle="collapse" data-parent="#accordion1" href="#collapseEight">Bleaching
+                    <a class="col headlining" data-toggle="collapse" data-parent="#accordion1" href="#collapseEight">Bleaching
                     </a>
                 </h4>
             </div>
@@ -399,11 +399,6 @@
             </div>
         </div>
     </div>
-
-    <p class="index-text">
-        Als Patient in unserer Wahlarztpraxis bekommen Sie von den von uns erbrachten Kassenleistungen bis zu 80% von Ihrer Krankenkasse rückerstattet.
-        Gerne übernehmen wir für Sie das Einreichen der Rechnung bei Ihrer Krankenkasse. </p>
-
 
     <!-- Footer -->
     <footer>
