--- a/team.html
+++ b/team.html
@@ -49,7 +49,8 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="index.html">
-                <img class="logo" src="pictures/logo_web_170.jpg" alt="">
+                <img class="logo" src="pictures/logo_new.png" alt="">
+                <img class="logo2" src="pictures/logo_new_min.png" alt="">
             </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -110,7 +111,7 @@
                 <p>Chiara Fellner (Assistentin)</p>
             </div>
             <div class="col-md-3">
-                <img class="img-responsive" src="pictures/Tanja_Katharina_Scharf.JPG" alt="">
+                <img class="img-responsive" src="pictures/Tanja_Katharina_Scharf.png" alt="">
                 <p>Tanja Katharina Scharf (Assistentin)</p>
             </div>
 
