--- a/impressum.html
+++ b/impressum.html
@@ -49,7 +49,8 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="index.html">
-                <img class="logo" src="pictures/logo_web_170.jpg" alt="">
+                <img class="logo" src="pictures/logo_new.png" alt="">
+                <img class="logo2" src="pictures/logo_new_min.png" alt="">
             </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -58,18 +59,18 @@
                 <li>
                     <a href="index.html">HOME</a>
                 </li>
-                <!--<li>-->
-                    <!--<a href="services.html">LEISTUNGEN</a>-->
-                <!--</li>-->
-                <!--<li>-->
-                    <!--<a href="ordination.html">ORDINATION</a>-->
-                <!--</li>-->
-                <!--<li>-->
-                    <!--<a href="team.html">TEAM</a>-->
-                <!--</li>-->
-                <!--<li>-->
-                    <!--<a href="contact.html">KONTAKT</a>-->
-                <!--</li>-->
+                <li>
+                    <a href="services.html">LEISTUNGEN</a>
+                </li>
+                <li>
+                    <a href="ordination.html">ORDINATION</a>
+                </li>
+                <li>
+                    <a href="team.html">TEAM</a>
+                </li>
+                <li>
+                    <a href="contact.html">KONTAKT</a>
+                </li>
                 <li>
                     <a href="impressum.html">IMPRESSUM</a>
                 </li>
