--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                        <img class="logo" src="pictures/logo_web_170.jpg" alt="">
+                        <img class="logo" src="pictures/logo_new.png" alt="">
+                        <img class="logo2" src="pictures/logo_new_min.png" alt="">
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -58,18 +59,18 @@
                     <li>
                         <a href="index.html">HOME</a>
                     </li>
-                    <!--<li>-->
-                        <!--<a href="services.html">LEISTUNGEN</a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<a href="ordination.html">ORDINATION</a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<a href="team.html">TEAM</a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<a href="contact.html">KONTAKT</a>-->
-                    <!--</li>-->
+                    <li>
+                        <a href="services.html">LEISTUNGEN</a>
+                    </li>
+                    <li>
+                        <a href="ordination.html">ORDINATION</a>
+                    </li>
+                    <li>
+                        <a href="team.html">TEAM</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">KONTAKT</a>
+                    </li>
                     <li>
                         <a href="impressum.html">IMPRESSUM</a>
                     </li>
@@ -86,33 +87,44 @@
         <!-- Heading Row -->
         <div class="row row-index">
             <div class="col-md-10 index-pic">
-                <img class="img-responsive img-rounded img-index" src="pictures/DrPetraDouschan_900x567.png" width="90%" alt="">
+                <img class="img-responsive img-rounded img-index" src="pictures/peziIndex.png" width="90%" alt="">
             </div>
 
             <div class="col-md-2">
-                <h2>Dr. Petra Douschan</h2>
-                 <p>   Zahnarzt<br/>
-                    Tel: +43 4352 49005</p>
-                <!--<h2>Termine</h2>-->
-                <!--Mo + Mi: 14-18<br/>-->
-                <!--Di + Do: 8-12<br/>-->
-                <!--Fr: nach Vereinbarung</p>-->
-                <h2>Adresse</h2>
-                St. Gertraud 84<br/>
-                9413 Frantschach-St.Gertraud<br/>
+                <h2 class="indexH2">Dr. Petra Douschan</h2>
+                 <p class="infos">   Zahnarzt<br/>
+                    Tel: +43 4352 49005</p><br>
+                <h2 class="indexH2">Ordinationszeiten</h2>
+                <p class="infos">Mo + Mi: 14-19<br/>
+                Di + Do: 8-13<br/>
+                Fr: 8-12</p><br>
+                <h2 class="indexH2">Adresse</h2>
+                <p class="infos">St. Gertraud 84<br/>
+                9413 Frantschach-St.Gertraud</p><br/>
             </div>
 
-</div>
+        </div>
+
+        <hr style="border: 0; height: 5px; background-image: linear-gradient(to right, rgb(255, 255, 255), rgb(52, 142, 162), rgb(255, 255, 255));" />
+
         <div class="row row-index">
             <div class="col-md-12">
-                <h2>Herzlich Willkommen in der Ordination Dr. Petra Douschan.</h2>
+                <h2 class="indexH2">Herzlich Willkommen in der Ordination Dr. Petra Douschan.</h2>
                 <!--<h2>Herzlich Willkommen in der Ordination Dr. Petra Douschan. <br> Lernen Sie uns und unsere Ordination kennen.</h2>-->
                 <hr>
                 <!--<p class="index-text">In unserer Wahlarztordination ist uns das Wohlergehen und Lächeln unserer Patienten wichtig. Direkt vor unserer Praxis-->
                     <!--haben Sie die Möglichkeit stress- und gebührenfrei Ihr Auto zu parken. Selbstverständlich sind sowohl der Zugang in die Ordination,-->
                     <!--als auch die Räumlichkeiten barrierefrei zu erreichen. Wir bemühen uns um eine rasche Terminvergabe und möglichst geringe Wartezeiten für alle unsere Patienten.-->
                     <!--</p>-->
-                <p class="index-text">Diese Seite befindet sich gerade im Umbau!</p>
+                <p class="index-text">
+                    Ihr Lächeln ist uns wichtig!<br><br>
+                    Wir nehmen uns ausreichend Zeit für Ihre Bedürfnisse, um Sie optimal zu beraten und Ihnen eine möglichst angenehme Zeit bei uns zu bieten.<br><br>
+                    In unserer barrierefrei zugänglichen Praxis mit Kassenvertrag bieten wir Ihnen ein breites Spektrum an Behandlungen der Zahnheilkunde an.<br><br>
+                    Wir würden uns freuen, Sie bei uns in der Praxis, wo Kinder und Erwachsene ebenso gut aufgehoben sind wie Angstpatienten, begrüßen zu dürfen.
+                    <br><br>
+                    Ihr Praxis- Team Dr. Douschan
+                </p>
+                <!--<p class="index-text">Diese Seite befindet sich gerade im Umbau!</p>-->
                 <hr>
                 <!--<p class="index-text">-->
                     <!--Als Patient in unserer Wahlarztpraxis bekommen Sie von den von uns erbrachten Kassenleistungen bis zu 80% von Ihrer Krankenkasse rückerstattet.-->
@@ -125,8 +137,7 @@
         </div>
         <!-- /.row -->
 
-        <hr>
-
+        <hr style="border: 0; height: 5px; background-image: linear-gradient(to right, rgb(255, 255, 255), rgb(52, 142, 162), rgb(255, 255, 255));" />
 
         <!-- Footer -->
         <footer>
