--- a/team.html
+++ b/team.html
@@ -31,7 +31,7 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" type="image/x-icon" href="pictures/placeholder.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="pictures/logo_blau_Icon.ico" />
 
 </head>
 
