--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </button>
                 <a class="navbar-brand" href="index.html">
                         <img class="logo" src="pictures/logo_new.png" alt="">
-                        <img class="logo2" src="pictures/logo_new_min.png" alt="">
+                        <!--<img class="logo2" src="pictures/logo_new_min.png" alt="">-->
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -87,7 +87,7 @@
         <!-- Heading Row -->
         <div class="row row-index">
             <div class="col-md-10 index-pic">
-                <img class="img-responsive img-rounded img-index" src="pictures/peziIndex.png" width="90%" alt="">
+                <img class="img-responsive img-rounded img-index" src="pictures/DrPetraDouschan2_clean_900x567.jpg" width="90%" alt="">
             </div>
 
             <div class="col-md-2">
@@ -95,9 +95,9 @@
                  <p class="infos">   Zahnarzt<br/>
                     Tel: +43 4352 49005</p><br>
                 <h2 class="indexH2">Ordinationszeiten</h2>
-                <p class="infos">Mo + Mi: 14-19<br/>
-                Di + Do: 8-13<br/>
-                Fr: 8-12</p><br>
+                <p class="infos">Mo + Mi: 14-19 Uhr<br/>
+                Di + Do: 8-13 Uhr<br/>
+                Fr: 8-12 Uhr</p><br>
                 <h2 class="indexH2">Adresse</h2>
                 <p class="infos">St. Gertraud 84<br/>
                 9413 Frantschach-St.Gertraud</p><br/>
