--- a/impressum.html
+++ b/impressum.html
@@ -50,7 +50,7 @@
             </button>
             <a class="navbar-brand" href="index.html">
                 <img class="logo" src="pictures/logo_new.png" alt="">
-                <img class="logo2" src="pictures/logo_new_min.png" alt="">
+                <!--<img class="logo2" src="pictures/logo_new_min.png" alt="">-->
             </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
