--- a/team.html
+++ b/team.html
@@ -108,11 +108,11 @@
             <!--</div>-->
             <div class="col-md-3">
                 <img class="img-responsive" src="pictures/chiara_fellner.JPG" alt="">
-                <p>Chiara Fellner (Assistentin)</p>
+                <p>Chiara (Assistentin)</p>
             </div>
             <div class="col-md-3">
                 <img class="img-responsive" src="pictures/Tanja_Katharina_Scharf.png" alt="">
-                <p>Tanja Katharina Scharf (Assistentin)</p>
+                <p>Tanja (Assistentin)</p>
             </div>
 
 
