removed team option

--- a/team.html
+++ b/team.html
@@ -65,9 +65,9 @@
                 <li>
                     <a href="ordination.html">ORDINATION</a>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="team.html">TEAM</a>
-                </li>
+                </li> -->
                 <li>
                     <a href="contact.html">KONTAKT</a>
                 </li>
@@ -98,24 +98,10 @@
 <!--            <div class="col-md-12">
                 <h2 class="page-header">Our Team</h2>
             </div>-->
-            <div class="col-md-3">
-                <img class="img-responsive" src="pictures/pezi.jpeg" alt="">
-                <p>Dr. Petra Douschan</p>
-            </div>
-            <!--<div class="col-md-3">-->
-                <!--<img class="img-responsive" src="pictures/assistant.jpeg" alt="">-->
-                <!--<p>Cornelia Glanznig (Assistentin)</p>-->
-            <!--</div>-->
-            <div class="col-md-3">
-                <img class="img-responsive" src="pictures/chiara_fellner.JPG" alt="">
-                <p>Chiara (Assistentin)</p>
-            </div>
-            <div class="col-md-3">
-                <img class="img-responsive" src="pictures/Tanja_Katharina_Scharf.png" alt="">
-                <p>Tanja (Assistentin)</p>
-            </div>
-
-
+            <!-- <div class="col-md-3">
+                <img class="img-responsive" src="....g" alt="">
+                <p>Name Here</p>
+            </div> -->
         </div>
         <!-- /.row -->
 
